--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 *.exe filter=lfs diff=lfs merge=lfs -text
 *.pkg filter=lfs diff=lfs merge=lfs -text
+build/main/main.pkg filter=lfs diff=lfs merge=lfs -text
+dist/main.exe filter=lfs diff=lfs merge=lfs -text
