--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,41 @@
-# Ignore virtual environment
-venv/
-
-# Ignore Python cache files
+# Python
 __pycache__/
 *.py[cod]
+*$py.class
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# Ignore logs
+# Logs
 logs/
 *.log
 
-# Ignore compiled Python files
-*.pyc
+# Security
+*.key
+token.json
+client_secret.json
 
-# Ignore wheel files
-*.whl
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
 
-# Ignore system files
-.DS_Store
-Thumbs.db
+# Environment
+.env
+venv/
+ENV/
