--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
-PyQt6==6.4.0
-SpeechRecognition==3.8.1
+PyQt6>=6.0.0
+google-auth>=2.22.0
+google-auth-oauthlib>=1.0.0
+selenium>=4.0.0
+pyautogui>=0.9.54
+rxpy>=0.1.0
+cryptography>=41.0.0
+structlog>=23.1.0
+SpeechRecognition>=3.10.0
+keyboard>=0.13.5
 # pyaudio==0.2.11 - sẽ cài riêng
