--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 PyQt6>=6.0.0
 google-auth>=2.22.0
 google-auth-oauthlib>=1.0.0
+google-api-python-client>=2.0.0
+google-auth-httplib2>=0.1.0
 selenium>=4.0.0
 pyautogui>=0.9.54
 rxpy>=0.1.0
@@ -8,4 +10,3 @@ cryptography>=41.0.0
 structlog>=23.1.0
 SpeechRecognition>=3.10.0
 keyboard>=0.13.5
-# pyaudio==0.2.11 - sẽ cài riêng
