--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ PyQt6>=6.0.0
 google-auth>=2.22.0
 google-auth-oauthlib>=1.0.0
 google-api-python-client>=2.0.0
-google-auth-httplib2>=0.1.0
 selenium>=4.0.0
+webdriver-manager>=4.0.0
 pyautogui>=0.9.54
 rxpy>=0.1.0
 cryptography>=41.0.0
