--- a/PROJECT/qt.conf
+++ b/PROJECT/qt.conf
@@ -1,2 +1,9 @@
 [Platforms]
-WindowsArguments = dpiawareness=0 
+WindowsArguments = dpiawareness=0,fontengine=freetype
+WindowsIntegration = true
+
+[QtQuick]
+RenderLoop=basic
+
+[Development]
+LogLevel=disable 
