--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 PyQt6>=6.0.0
-google-auth>=2.22.0
-google-auth-oauthlib>=1.0.0
-google-api-python-client>=2.0.0
-selenium>=4.0.0
-webdriver-manager>=4.0.0
+pyautogui>=0.9.54
+keyboard>=0.13.5
+pyperclip>=1.8.2
 psutil>=5.9.0
