--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,23 @@
-0==0.0.0
-click==8.1.7
-colorama==0.4.6
-joblib==1.4.2
-MouseInfo==0.1.3
-nltk==3.6.5
-PyAudio==0.2.14
-PyAutoGUI==0.9.53
-PyGetWindow==0.0.9
-PyMsgBox==1.0.9
-pyperclip==1.9.0
-PyQt5==5.15.6
-PyQt5-Qt5==5.15.2
-PyQt5_sip==12.15.0
-PyRect==0.2.0
-PyScreeze==1.0.1
-pytweening==1.2.0
-regex==2024.9.11
-SpeechRecognition==3.8.1
-tqdm==4.66.5
+# VoiceTyping - Core Dependencies
+# ================================
+
+# GUI Framework
+PyQt5>=5.15.6
+PyQt5-Qt5>=5.15.2
+PyQt5-sip>=12.15.0
+
+# Voice Recognition
+SpeechRecognition>=3.10.0
+
+# Audio Processing
+numpy>=1.24.0
+
+# Input Control
+PyAutoGUI>=0.9.53
+pyperclip>=1.9.0
+keyboard>=0.13.5
+
+# Optional: Offline Recognition (install separately if needed)
+# openai-whisper>=20231117
+# faster-whisper>=1.0.0
+# torch>=2.0.0
